@@ -1,3 +1,7 @@
+2007-11-16  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
+
+	* Feature/bugfix: Change to the initialisation sequence of htmlArea RTE
+
 2007-11-15  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
 	* Feature #6657 revisited: htmlArea RTE: remove em and strong remap from main script
